--- a/web/src/main/webapp/WEB-INF/resources/html/user.html
+++ b/web/src/main/webapp/WEB-INF/resources/html/user.html
@@ -35,7 +35,7 @@
     <div class="right menu">
         <div class="item">
             <div class="ui icon input">
-                <input type="text" placeholder="Search...">
+                <input type="text" placeholder="Search..." onclick="location.href=''">
                 <i class="search link icon"></i>
             </div>
         </div>
@@ -45,7 +45,6 @@
             </a>
         </div>
     </div>
-
 </div>
 
 <div class="ui piled segment">
