--- a/web/src/main/webapp/WEB-INF/resources/html/user.html
+++ b/web/src/main/webapp/WEB-INF/resources/html/user.html
@@ -16,68 +16,76 @@
 </head>
 <body class="login-body">
 
-
-
-<div class="ui secondary menu">
-    <a class="active item" href="${path}/user/${user.id}">
-        <i class="home icon"></i>User Name
-    </a>
-    <a class="item" href="${path}/questions">
-        <i class="home icon"></i>Questions
-    </a>
-    <a class="item" href="${path}/users">
-        <i class="users basic icon"></i>Users
-    </a>
-    <a class="item">
-        <i class="mail icon"></i>Log Out
-    </a>
-
-    <div class="right menu">
-        <div class="item">
-            <form action="/login" method="POST">
-                <div class="ui icon input">
-                    <input type="text" placeholder="Search...">
-                    <i class="search link icon"></i>
-                </div>
-            </form>
-        </div>
-        <div class="item">
-            <a class="item" href="${path}/questions/ask">
-                <i class="mail icon"></i>Ask Questions
-            </a>
-        </div>
-    </div>
-</div>
-
 <div class="ui piled segment">
-
     <p>
-
-    <h3>USERS</h3>
-    <div class="ui divider"></div>
+    <h3><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing ?</a></h3>
     <p>
+    <table class="ui basic small table">
+        <tbody>
+        <tr>
+            <td class="wide one" align="center" style="vertical-align: text-top;">
+                <h2>19</h2><br/>
+                <small>votes</small>
+            </td>
+            <td colspan="2">
+                <small>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus autem culpa eveniet harum
+                    laborum obcaecati quis repellendus sit totam voluptas. Aperiam aspernatur eaque in incidunt possimus
+                    reiciendis repellat suscipit totam.
+                </small>
+            </td>
+        </tr>
+        <tr>
+            <td></td>
+            <td class="wide eight" colspan="3">
+                <a href="#" class="ui label icon tag teal">tag1</a> <a href="#" class="ui label icon tag teal">doctor</a> <a href="#" class="ui label icon tag teal">lorem-ipsum-dolor</a>
+            </td>
+        </tr>
+        <tr>
+            <td></td>
+            <td class="wide seven"><a href="#">delete</a> | <a href="#">edit</a></td>
+            <td class="wide eight" align="left">
+                <small>asked <a href="#">Dozortsev Anton</a> 2014-12-01 / 16:45</small>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+
+
+
+    <!-- Comments -->
+
+    <div class="ui horizontal icon divider">
+        <i class="circular chat icon"></i>
+    </div>
 
     <table class="ui basic small table">
         <tbody>
         <tr>
-            <td rowspan="2" class="wide one" align="center">
-                <h2>2</h2><br/>
-                <small>answers</small>
+            <td class="wide one">
             </td>
-            <td rowspan="2" class="wide one" align="center">
-                <h2>19</h2><br/>
-                <small>votes</small>
-            </td>
-            <td colspan="2" class="wide sixteen">
-                <h3><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing ?</a></h3>
+            <td colspan="2" class="wide fifteen">
+                <small>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, neque. - <a href="#">Dozortsev Anton</a> 2014-12-01 / 16:45 <a href="#">delete</a>
+                </small>
             </td>
         </tr>
         <tr>
-            <td class="wide eight">
-                tag1 tag1 tag1 tag1 tag1
+            <td class="wide one">
             </td>
-            <td>
-                <small>asked <a href="#">Dozortsev Anton</a> 2014-12-01 / 16:45</small>
+            <td colspan="2" class="wide fifteen">
+                <small>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam delectus et quia quibusdam quisquam sit vitae! Ad alias deleniti earum, fuga molestiae molestias non placeat quas quod quos repellat tempore. - <a href="#">Dozortsev Anton</a> 2014-12-01 / 16:45 <a href="#">delete</a>
+                </small>
+            </td>
+        </tr>
+        <tr>
+            <td class="wide one">
+            </td>
+            <td colspan="2" class="wide fifteen">
+                <small>
+                    Lorem ipsum dolor sit amet? - <a href="#">Dozortsev Anton</a> 2014-12-01 / 16:45 <a href="#">delete</a>
+                </small>
             </td>
         </tr>
 
@@ -86,34 +94,110 @@
 
     <div class="ui section divider"></div>
 
+
+    <!-- Answers -->
+
+    <p>
+    <h4>2 Answers</h4>
+    <p>
+
+    <div class="ui horizontal icon divider">
+        <i class="circular flag icon"></i>
+    </div>
+
     <table class="ui basic small table">
         <tbody>
         <tr>
-            <td rowspan="2" class="wide one" align="center">
-                <h2>19</h2><br/>
+            <td class="wide one" align="center" style="vertical-align: text-top;">
+                <h2>5</h2><br/>
                 <small>votes</small>
             </td>
-            <td rowspan="2" class="wide one" align="center">
-                <h2>19</h2><br/>
-                <small>votes</small>
-            </td>
-            <td colspan="2" class="wide sixteen">
-                <h3><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing ?</a></h3>
+            <td colspan="2">
+                <small>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus autem culpa eveniet harum
+                    laborum obcaecati quis repellendus sit totam voluptas. Aperiam aspernatur eaque in incidunt possimus
+                    reiciendis repellat suscipit totam.
+
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus autem culpa eveniet harum
+                    laborum obcaecati quis repellendus sit totam voluptas. Aperiam aspernatur eaque in incidunt possimus
+                    reiciendis repellat suscipit totam.
+
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus autem culpa eveniet harum
+                    laborum obcaecati quis repellendus sit totam voluptas. Aperiam aspernatur eaque in incidunt possimus
+                    reiciendis repellat suscipit totam.
+
+
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus autem culpa eveniet harum
+                    laborum obcaecati quis repellendus sit totam voluptas. Aperiam aspernatur eaque in incidunt possimus
+                    reiciendis repellat suscipit totam.
+
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus autem culpa eveniet harum
+                    laborum obcaecati quis repellendus sit totam voluptas. Aperiam aspernatur eaque in incidunt possimus
+                    reiciendis repellat suscipit totam.
+                </small>
             </td>
         </tr>
         <tr>
-            <td class="wide eight">
-                tag1 tag1 tag1 tag1 tag1
+            <td></td>
+            <td class="wide seven"><a href="#">delete</a> | <a href="#">edit</a></td>
+            <td class="wide eight" align="left">
+                <small>answered <a href="#">Dozortsev Anton</a> 2014-12-01 / 16:45</small>
             </td>
-            <td>
-                <small>asked <a href="#">Dozortsev Anton</a> 2014-12-01 / 16:45</small>
+        </tr>
+
+        <!---->
+
+        <tr>
+            <td class="wide one" align="center" style="vertical-align: text-top;">
+                <h2>1</h2><br/>
+                <small>votes</small>
+            </td>
+            <td colspan="2">
+                <small>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus autem culpa eveniet harum
+                    laborum obcaecati quis repellendus sit totam voluptas. Aperiam aspernatur eaque in incidunt possimus
+                    reiciendis repellat suscipit totam.
+                </small>
+            </td>
+        </tr>
+        <tr>
+            <td></td>
+            <td class="wide seven"><a href="#">delete</a> | <a href="#">edit</a></td>
+            <td class="wide eight" align="left">
+                <small>answered <a href="#">Dozortsev Anton</a> 2014-12-01 / 16:45</small>
             </td>
         </tr>
 
         </tbody>
     </table>
 
+    <!-- Pos new Answer -->
+
+    <p>
+    <h4>Your answer</h4>
+    <p>
+
+    <div class="ui form">
+        <div class="field">
+            <textarea id="raw-content" name="aswContent" required></textarea>
+        </div>
+    </div>
+
+    <div class="ui horizontal icon divider">
+        <i class="circular magic icon"></i>
+    </div>
+
+    <div id="preview-container" class="ui segment">
+        <div id="preview-content" class="markdown-body"></div>
+    </div>
+
+    <div class="ui form">
+        <input class="ui small red submit button" type="submit" value="Post Your Answer"/>
+    </div>
+
 </div>
+
+<br/><br/><br/><br/><br/><br/>
 
 <!-- JS -->
 
