[#30]: Rendering answer content

--- a/web/src/main/webapp/WEB-INF/resources/html/user.html
+++ b/web/src/main/webapp/WEB-INF/resources/html/user.html
@@ -11,6 +11,7 @@
     <link rel="shortcut icon" href="../img/logo.png">
 
     <link rel="stylesheet" href="../css/semantic.css"/>
+    <link rel="stylesheet" href="../css/md-style.css"/>
     <link rel="stylesheet" href="../css/style.css"/>
 
 </head>
@@ -88,7 +89,17 @@
                 </small>
             </td>
         </tr>
-
+        <tr>
+            <td class="wide one"></td>
+            <td class="wide twelve">
+                <div class="ui fluid input">
+                    <input type="text" placeholder="Add comments...">
+                </div>
+            </td>
+            <td class="wide three">
+                <a class="ui small red button">Add Comment</a>
+            </td>
+        </tr>
         </tbody>
     </table>
 
