--- a/web/src/main/webapp/WEB-INF/resources/html/index.html
+++ b/web/src/main/webapp/WEB-INF/resources/html/index.html
@@ -16,6 +16,24 @@
 
 </head>
 
+<div class="ui secondary menu">
+    <a class="item" href="#" title="${user.name}">
+        +&ensp;<i class="user icon"></i>
+    </a>
+    <a class="item" href="#">
+        <i class="leaf icon"></i>Questions
+    </a>
+    <a class="item" href="#">
+        <i class="users basic icon"></i>Users
+    </a>
+    <a class="item right" href="#">
+    <i class="off icon"></i>Log Out
+    </a>
+    <a class="item right" href="#">
+        <i class="lightbulb icon"></i>Ask Questions
+    </a>
+</div>
+
 <body class="login-body"
 
       onload="
