--- a/web/src/main/webapp/WEB-INF/resources/html/index.html
+++ b/web/src/main/webapp/WEB-INF/resources/html/index.html
@@ -29,8 +29,8 @@
     <a class="item right" href="#">
     <i class="off icon"></i>Log Out
     </a>
-    <a class="item right" href="#">
-        <i class="lightbulb icon"></i>Ask Questions
+    <a class="item right" style="background-color: #faea9f" href="#">
+        <b><i class="lightbulb icon"></i>Ask Questions</b>
     </a>
 </div>
 
@@ -42,7 +42,7 @@
 
 <div class="ui piled segment">
 
-    <table class="ui basic table">
+    <table class="ui basic table" border="1">
         <thead>
         <tr>
             <th class="ui header" colspan="3">
@@ -52,7 +52,7 @@
         </thead>
         <tbody>
         <tr>
-            <td rowspan="2">
+            <td rowspan="3">
                 <h1>10</h1>
             </td>
             <td colspan="2">
@@ -67,9 +67,13 @@
             </td>
         </tr>
         <tr>
-            <td>
+            <td colspan="2">
+                <a class="ui teal label">Tag 1</a>&thinsp;<a class="ui teal label">Tag 2</a>
                 <a class="ui teal label">Tag 1</a>&thinsp;<a class="ui teal label">Tag 2</a>
             </td>
+        </tr>
+        <tr>
+            <td class="wide nine"></td>
             <td>
                 Asked&ensp;20-19-12 / 17:56 User Name
             </td>
