--- a/web/src/main/webapp/WEB-INF/resources/html/index.html
+++ b/web/src/main/webapp/WEB-INF/resources/html/index.html
@@ -2,6 +2,8 @@
 <html>
 <head lang="en">
 
+[man]  [voman-vasa] [vase]
+
     <meta charset="UTF-8">
 
     <title>
@@ -41,6 +43,10 @@
       mdRawConvector('#question-raw-content', '#question-preview')">
 
 <div class="ui piled segment">
+
+
+    <input id="tags" type="text"/>
+
 
     <table class="ui basic table">
         <thead>
